testsuite/tests/properties/invalid_node_builder/test.out
== bad_build_type.lkt ==
bad_build_type.lkt:7:31: error: Expected type DerivedNode, got EmptyNode
7 |     @lazy prop: DerivedNode = EmptyNode.builder().build()
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^


== bad_generic_arity.lkt ==
bad_generic_arity.lkt:4:14: error: NodeBuilder expects one type argument: the node type
4 |     fun f(): NodeBuilder[FooNode, FooNode] = EmptyNode.builder()
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== bad_generic_type.lkt ==
bad_generic_type.lkt:4:26: error: node expected
4 |     fun f(): NodeBuilder[Int] = 0
  |                          ^^^


== bad_kwarg_type_1.lkt ==
bad_kwarg_type_1.lkt:9:9: error: Wrong type for field SynthNode.f1: expected NodeBuilder[Literal], got NodeBuilder[EmptyNode]
9 |         SynthNode.builder(
  |         ^


== bad_kwarg_type_2.lkt ==
bad_kwarg_type_2.lkt:4:29: error: Wrong type for field SynthNode.f1: expected NodeBuilder[Literal], got Literal
4 |     @lazy prop: SynthNode = SynthNode.builder(


== bad_parent.lkt ==
bad_parent.lkt:4:55: error: Expected type FooNode, got Int
4 |     @lazy prop: EmptyNode = EmptyNode.builder().build(1)
  |                                                       ^


== list_bad_type.lkt ==
list_bad_type.lkt:11:38: error: Expected type NodeBuilder[Literal].array, got NodeBuilder[FooNode].array
11 |         SyntheticLiteralList.builder([]: NodeBuilder[FooNode]).build()
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^


== list_missing_user_field.lkt ==
list_missing_user_field.lkt:12:9: error: Values are missing for SyntheticLiteralList fields: f
12 |         SyntheticLiteralList.builder([]: NodeBuilder[Literal]).build()
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== list_no_children.lkt ==
list_no_children.lkt:10:55: error: One positional argument expected: the array of node builders for each element for the list node to synthetize
10 |     prop: SyntheticLiteralList = SyntheticLiteralList.builder().build()
   |                                                       ^^^^^^^


== missing_kwarg.lkt ==
missing_kwarg.lkt:4:30: error: Values are missing for SynthNode fields: f2, number
4 |     @lazy prop1: SynthNode = SynthNode.builder(f1=null[Literal]).build()
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== not_lazy.lkt ==
not_lazy.lkt:4:39: error: NodeBuilder.build can be called in lazy field initializers only
4 |     @exported fun prop(): EmptyNode = EmptyNode.builder().build()
  |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^


== not_synth.lkt ==
not_synth.lkt:4:37: error: node builders can yield synthetic nodes only
4 |     @lazy prop: EmptyNode = Literal.builder().build()
  |                                     ^^^^^^^


== null.lkt ==
null.lkt:4:44: error: Invalid type for Null expression: NodeBuilder[EmptyNode]
4 |     fun f(): NodeBuilder[EmptyNode] = null[NodeBuilder[EmptyNode]]
  |                                            ^^^^^^^^^^^^^^^^^^^^^^


== pos_arg.lkt ==
pos_arg.lkt:4:47: error: Positional arguments not allowed for .builder
4 |     @lazy prop: EmptyNode = EmptyNode.builder(1).build()
  |                                               ^


== spurious_kwarg.lkt ==
spurious_kwarg.lkt:4:29: error: Extraneous fields for EmptyNode: foo
4 |     @lazy prop: EmptyNode = EmptyNode.builder(foo=null[FooNode]).build()
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== to_builder_non_node.lkt ==
to_builder_non_node.lkt:6:17: error: Expected type FooNode, got Int
6 |         val b = i.to_builder();
  |                 ^


lkt_compile: Done
